Corregir nombre del archivo ipynb

--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -315,7 +315,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YOBXtHhrbVwj"
+        "id": "gimd0Sbgk4Pl"
       },
       "source": [
         "**11. git stash**\n",
@@ -393,7 +393,7 @@
       "source": [
         "<code>Link Presentacion 1:</code> https://github.com/sivv1812/sivv1812\n",
         "\n",
-        "<code>Link Presentacion 2:</code> https://github.com/LuisOrtegaAstudillo"
+        "<code>Link Presentacion 2:</code>"
       ]
     },
     {
@@ -602,25 +602,6 @@
       "source": [
         "<code>Escriba sus respuestas acá:</code> se creo una rama y se elimino la linea comentada anteriormente, tambien se uso git branch main_alternativo para crear la rama con el codigo corregido."
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Contenido del archivo .gitignore\n",
-        "# Ignora la carpeta 'videos'\n",
-        "videos/\n",
-        "\n",
-        "# Ignora todos los archivos con extensión .txt\n",
-        "*.txt\n",
-        "\n",
-        "# Excepción: no ignores el archivo 171.txt que está dentro de la carpeta texts\n",
-        "!texts/171.txt"
-      ],
-      "metadata": {
-        "id": "LtGAmbjUhGhw"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
